--- a/Module-01/HoricaApp/Main.html
+++ b/Module-01/HoricaApp/Main.html
@@ -4,10 +4,9 @@
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
   <title>Opdracht 1</title>
   <script src="System.js" async></script>
-  <link rel="stylesheet" href="CSS.css">
 </head>
 <body>
-<h1> MainPage </h1>
+<h1> Reload To Go Again </h1>
 <p id="antwoord"></p>
 </body>
 </html>
