--- a/Module-01/HoricaApp/Main.html
+++ b/Module-01/HoricaApp/Main.html
@@ -2,13 +2,17 @@
 <html lang="nl">
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-  <title>Opdracht 1</title>
+  <title>cijferruit</title>
   <script src="System.js" async></script>
+<!--  <link rel="stylesheet" href="index.css">-->
 </head>
+
 <body>
-<h1> Reload To Go Again </h1>
-<p id="antwoord"></p>
+<h1>Opdracht 3</h1>
+<div>
+  <h1 id="bon"></h1>
+  <p id="bon-producten"></p>
+  <p id="totaalprijs"></p>
+</div>
 </body>
 </html>
-
-
