--- a/Module-01/Buttons_01/buttons-template/buttons.html
+++ b/Module-01/Buttons_01/buttons-template/buttons.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/html">
+<html xmlns="http://www.w3.org/1999/html" lang="nl">
 <head>
     <script src="buttons.js"></script>
     <style>
@@ -19,13 +19,14 @@
         .button2 {background-color: #008CBA;} /* Blue */
         .button3 {background-color: #ff0000;} /* Red */
     </style>
+    <title></title>
 </head>
 <body>
-<img src="images/bg0.jpg">
-<img src="images/0.jpg">
-<button id="Button1"class="button button1" onclick="buttoneventhandler(this.id)">Green</button>
-<button id="Button2"class="button button2" onclick="buttoneventhandler(this.id)">Blue</button>
-<button id="Button3"class="button button3" onclick="buttoneventhandler(this.id)">Blue</button>
+<img src="images/bg0.jpg" alt="0">
+<img src="images/0.jpg" alt="0">
+<button id="Button1" class="button button1" onclick="buttoneventhandler(this.id)">Green</button>
+<button id="Button2" class="button button2" onclick="buttoneventhandler(this.id)">Blue</button>
+<button id="Button3" class="button button3" onclick="buttoneventhandler(this.id)">Blue</button>
 
 </body>
 </html>
