Adding the buttons 01 files again

--- a/Module-01/Buttons_01/buttons-template/buttons.html
+++ b/Module-01/Buttons_01/buttons-template/buttons.html
@@ -24,9 +24,9 @@
 <body>
 <img src="images/bg0.jpg" alt="0">
 <img src="images/0.jpg" alt="0">
-<button id="Button1" class="button button1" onclick="buttoneventhandler(this.id)">Green</button>
-<button id="Button2" class="button button2" onclick="buttoneventhandler(this.id)">Blue</button>
-<button id="Button3" class="button button3" onclick="buttoneventhandler(this.id)">Blue</button>
+<button id="Button1" class="button button1" onclick="button_event_handler1(this.id)">Green</button>
+<button id="Button2" class="button button2" onclick="button_event_handler2(this.id)">Blue</button>
+<button id="Button3"  class="button button3" onclick="button_event_handler3(this.id)">Blue</button>
 
 </body>
 </html>
