--- a/Module-01/Buttons_01/buttons-template/buttons.html
+++ b/Module-01/Buttons_01/buttons-template/buttons.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/html" lang="nl">
 <head>
-    <script src="buttons.js"></script>
     <style>
         .button {
             border: none;
@@ -14,7 +13,7 @@
             margin: 4px 2px;
             cursor: pointer;
         }
-
+        .button0 {background-color: #008CBA;} /* cyan */
         .button1 {background-color: #4CAF50;} /* Green */
         .button2 {background-color: #008CBA;} /* Blue */
         .button3 {background-color: #ff0000;} /* Red */
@@ -22,11 +21,13 @@
     <title></title>
 </head>
 <body>
-<img src="images/bg0.jpg" alt="0">
-<img src="images/0.jpg" alt="0">
-<button id="Button1" class="button button1" onclick="button_event_handler1(this.id)">Green</button>
-<button id="Button2" class="button button2" onclick="button_event_handler2(this.id)">Blue</button>
-<button id="Button3"  class="button button3" onclick="button_event_handler3(this.id)">Blue</button>
+<img src="images/bg0.jpg" alt="0" id="backgroundimg0">
+<img src="images/0.jpg" alt="0" id="containerimg0">
+
+<button id="Button0" class="button button0" onclick="button_event_handler0(this.id)">0</button>
+<button id="Button1" class="button button1" onclick="button_event_handler1(this.id)">1</button>
+<button id="Button2" class="button button2" onclick="button_event_handler2(this.id)">2</button>
+<button id="Button3"  class="button button3" onclick="button_event_handler3(this.id)">3</button>
 
 </body>
 </html>
