working galery page thing

--- a/Challenges/Galery/Main.html
+++ b/Challenges/Galery/Main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
     <title>Gallery System</title>
     <link rel="stylesheet" type="text/css" href="Css.css">
@@ -7,7 +7,7 @@
     <body>
         <div class="gallery">
             <button class="prev-btn">&lt; Previous</button>
-            <img class="image" src="Fox.jpg">
+            <img class="image" src="Fox.jpg" alt="">
             <button class="next-btn">Next &gt;</button>
         </div>
         <script src="System.js"></script>
